# smooth-route

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_STRATEGY.md  DEVELOPMENT.md  IMPROVEMENT_STRATEGY.md  Makefile  NEXT_STEPS.md  README.md  RQI_CONSISTENCY_REPORT.md  analyze_calibration.py  check_correlation.py  check_filenames.py  clear_jobs.py  cli.sh  confusion_matrix.py  debug_route_test.py  diagnose_stats.py  docker-compose.yml  inspect_samples.py  list_jobs.py  schema.graphql  verify_calibration_v2.py  verify_real_images.py
backend/: .vercelignore  Dockerfile  README.md  alembic.ini  check_db.py  migrate_dino.py  pyproject.toml  requirements-readonly.txt  test_dino_inference.py  test_graphql_point.py  train_dino_head.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_users.py  0003_pano_id.py
backend/api/: index.py
backend/app/: cli.py  main.py
backend/app/api/: routes.py
backend/app/core/: auth.py  config.py  migrations.py  paths.py  settings_manager.py  settings_registry.py
backend/app/graphql/: context.py  mutations.py  permissions.py  queries.py  resolver_helpers.py  schema.py  types.py
backend/app/models/: models.py
backend/app/services/: dino_service.py  google_maps.py  image_downloader.py  inference.py  job_runner.py  job_service.py  map_aggregation.py  preprocessing.py  processing_service.py  review_service.py  road_analyzer.py  road_quality.py  route_collector.py  rqi_scoring.py  tasks.py  training_service.py  (+1 more)
backend/config/: analysis_settings.json
backend/scripts/: publish.py
backend/static/: collect.html  map.html  settings.html
backend/tests/: conftest.py  test_api.py  test_api_surface.py  test_auth.py  test_config_paths.py  test_dino_service.py  test_map_aggregation.py  test_permissions.py  test_rqi_scoring.py  test_settings_manager.py  test_yolo_loader.py
(+166 files in other folders)
