[project]
name = "smooth-route-backend"
version = "0.1.0"
description = "Backend for Kátyúőr (smooth-route) application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "geoalchemy2>=0.14.3",
    "psycopg2-binary>=2.9.9",
    "googlemaps>=4.10.0",
    "numpy>=1.26.3",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "typer>=0.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
