[project]
name = "smooth-route-backend"
version = "0.1.0"
description = "Backend for Kátyúőr (smooth-route) application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "geoalchemy2>=0.14.3",
    "psycopg2-binary>=2.9.9",
    "googlemaps>=4.10.0",
    "numpy>=1.26.3",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "strawberry-graphql[debug-server]>=0.219.0",
    "sse-starlette>=2.0.0",
    "alembic>=1.13",
    "PyJWT[crypto]>=2.10",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
smooth-route = "app.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
